added first post

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ group_name: Significant Projects
 extern_name: External Links
 # URLs, format name:url
 extern_urls:
-  Wiskunde & Informatica: https://www.cwi.nl/people/cedric-rodriguez/
+  C. Wiskunde & Informatica: https://www.cwi.nl/people/cedric-rodriguez/
   LUMC AI Research Meetup: https://lumcaimeetup.github.io/
 
 # build settings
